# seqtoid-workflows

./: .gitignore  .gitleaks.toml  .trivyignore  CONTRIBUTING.md  MAINTENANCE.md  README.md  renovate.json  requirements-dev.txt
.github/workflows/: actionlint.yml  idseq-dag-tests.yml  index-generation-cargo-test.yml  release_workflows.yml  security.yml  short-read-mngs-full-benchmarks.yml  short-read-mngs-viral-benchmarks.yml  wdl-ci-integration.yml  wdl-ci.yml
deploy/charts/seqtoid-pipeline-runner/: Chart.yaml  values.yaml
deploy/charts/seqtoid-pipeline-runner/templates/: _helpers.tpl  (+2 more)
lib/idseq-dag/: run_idseq_dag_tests.sh
lib/idseq-dag/idseq_dag/: __init__.py
lib/idseq_utils/idseq_utils/: batch_run_helpers.py
runner/: Dockerfile  README.md  pyproject.toml
runner/seqtoid_pipeline_runner/: __init__.py  __main__.py  config.py  queue.py  run_request.py  runner.py
runner/tests/: test_runner.py
scripts/: push_all_images.py  push_all_workflows.py
workflows/amr/: Dockerfile  run.wdl
workflows/benchmark/: Dockerfile  requirements-dev.txt
workflows/benchmark/benchmark_helpers/: setup.py
workflows/bulk-download/: Dockerfile
workflows/consensus-genome/: run.wdl
workflows/diamond/: Dockerfile
workflows/index-generation/: Dockerfile
workflows/legacy-host-filter/: Dockerfile
workflows/long-read-mngs/: run.wdl
workflows/minimap2/: Dockerfile
workflows/short-read-mngs/: Dockerfile  experimental.wdl  host_filter.wdl  host_filter_defaults.yml  non_host_alignment.wdl  postprocess.wdl
workflows/short-read-mngs/auto_benchmark/: benchmarks.yml
(+2 files in other folders)
