[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seqtoid-pipeline-runner"
version = "0.1.0"
description = "Self-hosted miniwdl-on-Kubernetes pipeline runner (CZID-72)"
requires-python = ">=3.10"
dependencies = [
    "miniwdl>=1.12",
    "miniwdl-k8s",     # the Kubernetes backend plugin for miniwdl
    "boto3>=1.34",
]

[project.scripts]
# The chart's `command: ["seqtoid-pipeline-runner"]` resolves to this entry point.
seqtoid-pipeline-runner = "seqtoid_pipeline_runner.__main__:main"

[tool.setuptools]
packages = ["seqtoid_pipeline_runner"]
